--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-        <link rel="CSS.css" >
+        <link rel="stylesheet" href="CSS.css" >
         </title>
     </head>
     <body>
