--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
     <head>
-        <title>
-        <link rel="stylesheet" href="CSS.css" >
-        </title>
+        <title> wdad</title>
+        <link rel="stylesheet" href="CSS.css"/>
     </head>
     <body>
             <header>
